--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"firebase": "^10.7.1",
+		"@sanity/client": "^6.10.0",
 		"theme-change": "^2.5.0"
 	}
 }
